Fix image width on mobile

--- a/base_style.css
+++ b/base_style.css
@@ -94,3 +94,9 @@ h1 {
 		display:block;
 	}
 }
+
+@media only screen and (min-device-width : 320px) {
+	img {
+		max-width: 100%; 
+	}
+}
